Need to fix z-index

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -10,7 +10,7 @@
     min-height: 100vh;
 }
 
-.app_container {
+.app_container .prose {
     pre *{
         text-shadow: none !important;
     }
@@ -23,7 +23,62 @@
             @include pulse(1s, 5);
         }
     }
+    code {
+        background: #fff1;
+        border-radius: 3px;
+        padding: 2px;
+        &::before, &::after {display: none !important;}
+    }
+    pre code {
+        background: transparent;
+    }
+    hr {
+        outline: none;
+        border: none;
+        background: linear-gradient(to right, transparent, $base-color, adjust-hue($base-color, 50), transparent);
+        height: 1px;
+    }
+    .img_wrapper {
+        &, & * {
+            transition: all .3s ease;
+        }
+        background-color: $base-color;
+        position: relative;
+        &:hover {
+            img {
+                filter: none;
+            }
+            background: white;
+            &::before {
+                background: transparent;
+            }
+        }
+        img {
+            filter: grayscale(100%) contrast(1);
+            flex: 1 0 100%;
+            height: 100%;
+            max-width: 100%;
+            mix-blend-mode: multiply;
+            object-fit: cover;
+            position: relative;
+            width: 100%;
+        }
+        &::before {
+            background-color: $background;
+            bottom: 0;
+            content: '';
+            height: 100%;
+            left: 0;
+            mix-blend-mode: lighten;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 100%;
+            z-index: 1;
+        }
+    }
 }
+
 
 .app_container {
     display: flex;
@@ -34,6 +89,10 @@
     width: 100vw;
     padding: 70px 0;
     flex-direction: column;
+    z-index: -1;
+}
+body {
+    z-index: -100;
 }
 
 #info {
